# wasmcomponents

./: .gitignore  .gitmodules  Makefile  PLAN.md  README.md  _RocqProject  flake.nix  rocq-wasmcomponents.opam
.github/workflows/: docker-action.yml  main.yml  nix-action-9.0.yml  nix-action-9.1.yml
.nix/: config.nix
.nix/rocq-overlays/wasmcert/: default.nix
.nix/rocq-overlays/wasmcomponents/: default.nix
src/: main.ml
testing/: test_component_parser.py  test_parser.py
theories/: Main.v  component_ast.v  component_binary_parser.v  component_binary_parser_tests.v  extraction.v  wit_ast.v  wit_parser.v
