opam-version: "2.0"
maintainer: "W. Meier"
version: "dev"
license: "MIT"

synopsis: "WasmComponents"
description: "Formalization of the Wasm Component standard."

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "rocq-core" {>= "9.0"}
  "rocq-stdlib"
  "coq-wasm" {>= "2.2.0"}
]

tags: [
  "logpath:wasmcomponents"
]
authors: [ "W. Meier" ]
